src/check/snapshots/protox__check__tests__enum_field_invalid_default-2.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\n        package foo;\n\n        message Message {\n            optional Foo foo = 1 [default = ZERO];\n\n            enum Foo {\n                ZERO = 0;\n            }\n        }\")"
---
name: root.proto
package: foo
messageType:
  - name: Message
    field:
      - name: foo
        number: 1
        label: LABEL_OPTIONAL
        type: TYPE_ENUM
        typeName: ".foo.Message.Foo"
        defaultValue: ZERO
        jsonName: foo
    enumType:
      - name: Foo
        value:
          - name: ZERO
            number: 0
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 9
        - 9
    - path:
        - 2
      span:
        - 1
        - 8
        - 20
    - path:
        - 4
        - 0
      span:
        - 3
        - 8
        - 9
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 3
        - 16
        - 23
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 4
        - 12
        - 50
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 4
        - 25
        - 28
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 4
        - 31
        - 32
    - path:
        - 4
        - 0
        - 2
        - 0
        - 4
      span:
        - 4
        - 12
        - 20
    - path:
        - 4
        - 0
        - 2
        - 0
        - 6
      span:
        - 4
        - 21
        - 24
    - path:
        - 4
        - 0
        - 2
        - 0
        - 7
      span:
        - 4
        - 44
        - 48
    - path:
        - 4
        - 0
        - 2
        - 0
        - 8
      span:
        - 4
        - 33
        - 49
    - path:
        - 4
        - 0
        - 4
        - 0
      span:
        - 6
        - 12
        - 8
        - 13
    - path:
        - 4
        - 0
        - 4
        - 0
        - 1
      span:
        - 6
        - 17
        - 20
    - path:
        - 4
        - 0
        - 4
        - 0
        - 2
        - 0
      span:
        - 7
        - 16
        - 25
    - path:
        - 4
        - 0
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 7
        - 16
        - 20
    - path:
        - 4
        - 0
        - 4
        - 0
        - 2
        - 0
        - 2
      span:
        - 7
        - 23
        - 24

