src/check/snapshots/protox__check__tests__enum_reserved_range_extrema.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        syntax = \"proto3\";\n\n        enum Extreme {\n            ZERO = 0;\n            reserved -2147483648 to -1, 1 to 2147483647;\n        }\n        \"#)"
---
name: root.proto
enumType:
  - name: Extreme
    value:
      - name: ZERO
        number: 0
    reservedRange:
      - start: -2147483648
        end: -1
      - start: 1
        end: 2147483647
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 6
        - 9
    - path:
        - 5
        - 0
      span:
        - 3
        - 8
        - 6
        - 9
    - path:
        - 5
        - 0
        - 1
      span:
        - 3
        - 13
        - 20
    - path:
        - 5
        - 0
        - 2
        - 0
      span:
        - 4
        - 12
        - 21
    - path:
        - 5
        - 0
        - 2
        - 0
        - 1
      span:
        - 4
        - 12
        - 16
    - path:
        - 5
        - 0
        - 2
        - 0
        - 2
      span:
        - 4
        - 19
        - 20
    - path:
        - 5
        - 0
        - 4
      span:
        - 5
        - 12
        - 56
    - path:
        - 5
        - 0
        - 4
        - 0
      span:
        - 5
        - 21
        - 38
    - path:
        - 5
        - 0
        - 4
        - 0
        - 1
      span:
        - 5
        - 21
        - 32
    - path:
        - 5
        - 0
        - 4
        - 0
        - 2
      span:
        - 5
        - 36
        - 38
    - path:
        - 5
        - 0
        - 4
        - 1
      span:
        - 5
        - 40
        - 55
    - path:
        - 5
        - 0
        - 4
        - 1
        - 1
      span:
        - 5
        - 40
        - 41
    - path:
        - 5
        - 0
        - 4
        - 1
        - 2
      span:
        - 5
        - 45
        - 55
    - path:
        - 12
      span:
        - 1
        - 8
        - 26
syntax: proto3

