src/check/snapshots/protox__check__tests__enum_reserved_range_invalid.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"enum Enum {\n            reserved 1 to 1;\n        }\"#)"
---
name: root.proto
enumType:
  - name: Enum
    reservedRange:
      - start: 1
        end: 1
sourceCodeInfo:
  location:
    - span:
        - 0
        - 0
        - 2
        - 9
    - path:
        - 5
        - 0
      span:
        - 0
        - 0
        - 2
        - 9
    - path:
        - 5
        - 0
        - 1
      span:
        - 0
        - 5
        - 9
    - path:
        - 5
        - 0
        - 4
      span:
        - 1
        - 12
        - 28
    - path:
        - 5
        - 0
        - 4
        - 0
      span:
        - 1
        - 21
        - 27
    - path:
        - 5
        - 0
        - 4
        - 0
        - 1
      span:
        - 1
        - 21
        - 22
    - path:
        - 5
        - 0
        - 4
        - 0
        - 2
      span:
        - 1
        - 26
        - 27

