src/check/snapshots/protox__check__tests__extend_group_field.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        message Message {\n            extensions 1;\n        }\n\n        extend Message {\n            repeated group Foo = 1 {\n                required int32 bar = 1;\n            };\n        }\n    \"#)"
---
name: root.proto
messageType:
  - name: Message
    extensionRange:
      - start: 1
        end: 2
  - name: Foo
    field:
      - name: bar
        number: 1
        label: LABEL_REQUIRED
        type: TYPE_INT32
        jsonName: bar
extension:
  - name: foo
    extendee: ".Message"
    number: 1
    label: LABEL_REPEATED
    type: TYPE_GROUP
    typeName: ".Foo"
    jsonName: foo
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 9
        - 9
    - path:
        - 4
        - 0
      span:
        - 1
        - 8
        - 3
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 1
        - 16
        - 23
    - path:
        - 4
        - 0
        - 5
      span:
        - 2
        - 12
        - 25
    - path:
        - 4
        - 0
        - 5
        - 0
      span:
        - 2
        - 23
        - 24
    - path:
        - 4
        - 0
        - 5
        - 0
        - 1
      span:
        - 2
        - 23
        - 24
    - path:
        - 4
        - 0
        - 5
        - 0
        - 2
      span:
        - 2
        - 23
        - 24
    - path:
        - 4
        - 1
      span:
        - 6
        - 12
        - 8
        - 13
    - path:
        - 4
        - 1
        - 1
      span:
        - 6
        - 27
        - 30
    - path:
        - 4
        - 1
        - 2
        - 0
      span:
        - 7
        - 16
        - 39
    - path:
        - 4
        - 1
        - 2
        - 0
        - 1
      span:
        - 7
        - 31
        - 34
    - path:
        - 4
        - 1
        - 2
        - 0
        - 3
      span:
        - 7
        - 37
        - 38
    - path:
        - 4
        - 1
        - 2
        - 0
        - 4
      span:
        - 7
        - 16
        - 24
    - path:
        - 4
        - 1
        - 2
        - 0
        - 5
      span:
        - 7
        - 25
        - 30
    - path:
        - 7
      span:
        - 5
        - 8
        - 9
        - 9
    - path:
        - 7
        - 0
      span:
        - 6
        - 12
        - 8
        - 13
    - path:
        - 7
        - 0
        - 1
      span:
        - 6
        - 27
        - 30
    - path:
        - 7
        - 0
        - 2
      span:
        - 5
        - 15
        - 22
    - path:
        - 7
        - 0
        - 3
      span:
        - 6
        - 33
        - 34
    - path:
        - 7
        - 0
        - 4
      span:
        - 6
        - 12
        - 20
    - path:
        - 7
        - 0
        - 5
      span:
        - 6
        - 21
        - 26
    - path:
        - 7
        - 0
        - 6
      span:
        - 6
        - 27
        - 30

