src/check/snapshots/protox__check__tests__message_reserved_range_message_set-2.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        message Foo {\n            extensions 1 to max;\n\n            option message_set_wire_format = true;\n        }\n        \"#)"
---
name: root.proto
messageType:
  - name: Foo
    extensionRange:
      - start: 1
        end: 2147483647
    options:
      messageSetWireFormat: true
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 5
        - 9
    - path:
        - 4
        - 0
      span:
        - 1
        - 8
        - 5
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 1
        - 16
        - 19
    - path:
        - 4
        - 0
        - 5
      span:
        - 2
        - 12
        - 32
    - path:
        - 4
        - 0
        - 5
        - 0
      span:
        - 2
        - 23
        - 31
    - path:
        - 4
        - 0
        - 5
        - 0
        - 1
      span:
        - 2
        - 23
        - 24
    - path:
        - 4
        - 0
        - 5
        - 0
        - 2
      span:
        - 2
        - 28
        - 31
    - path:
        - 4
        - 0
        - 7
      span:
        - 4
        - 12
        - 50
    - path:
        - 4
        - 0
        - 7
        - 1
      span:
        - 4
        - 12
        - 50

