src/check/snapshots/protox__check__tests__name_conflict_field_camel_case.snap
---
source: src/check/tests.rs
expression: "check_ok(\"syntax = 'proto2';\n\n        message Foo {\\\n            optional int32 foo = 1;\n            optional int32 FOO = 2;\n        }\")"
---
name: root.proto
messageType:
  - name: Foo
    field:
      - name: foo
        number: 1
        label: LABEL_OPTIONAL
        type: TYPE_INT32
        jsonName: foo
      - name: FOO
        number: 2
        label: LABEL_OPTIONAL
        type: TYPE_INT32
        jsonName: FOO
sourceCodeInfo:
  location:
    - span:
        - 0
        - 0
        - 4
        - 9
    - path:
        - 4
        - 0
      span:
        - 2
        - 8
        - 4
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 2
        - 16
        - 19
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 2
        - 21
        - 44
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 2
        - 36
        - 39
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 2
        - 42
        - 43
    - path:
        - 4
        - 0
        - 2
        - 0
        - 4
      span:
        - 2
        - 21
        - 29
    - path:
        - 4
        - 0
        - 2
        - 0
        - 5
      span:
        - 2
        - 30
        - 35
    - path:
        - 4
        - 0
        - 2
        - 1
      span:
        - 3
        - 12
        - 35
    - path:
        - 4
        - 0
        - 2
        - 1
        - 1
      span:
        - 3
        - 27
        - 30
    - path:
        - 4
        - 0
        - 2
        - 1
        - 3
      span:
        - 3
        - 33
        - 34
    - path:
        - 4
        - 0
        - 2
        - 1
        - 4
      span:
        - 3
        - 12
        - 20
    - path:
        - 4
        - 0
        - 2
        - 1
        - 5
      span:
        - 3
        - 21
        - 26
    - path:
        - 12
      span:
        - 0
        - 0
        - 18

