src/check/snapshots/protox__check__tests__oneof_group_field.snap
---
source: src/check/tests.rs
expression: "check_ok(r#\"\n        message Message {\n            oneof oneof {\n                group Group = 1 {\n                    repeated float bar = 1;\n                }\n            }\n        }\n        \"#)"
---
name: root.proto
messageType:
  - name: Message
    field:
      - name: group
        number: 1
        label: LABEL_OPTIONAL
        type: TYPE_GROUP
        typeName: ".Message.Group"
        oneofIndex: 0
        jsonName: group
    nestedType:
      - name: Group
        field:
          - name: bar
            number: 1
            label: LABEL_REPEATED
            type: TYPE_FLOAT
            jsonName: bar
    oneofDecl:
      - name: oneof
sourceCodeInfo:
  location:
    - span:
        - 1
        - 8
        - 7
        - 9
    - path:
        - 4
        - 0
      span:
        - 1
        - 8
        - 7
        - 9
    - path:
        - 4
        - 0
        - 1
      span:
        - 1
        - 16
        - 23
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 3
        - 16
        - 5
        - 17
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 3
        - 22
        - 27
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 3
        - 30
        - 31
    - path:
        - 4
        - 0
        - 2
        - 0
        - 5
      span:
        - 3
        - 16
        - 21
    - path:
        - 4
        - 0
        - 2
        - 0
        - 6
      span:
        - 3
        - 22
        - 27
    - path:
        - 4
        - 0
        - 3
        - 0
      span:
        - 3
        - 16
        - 5
        - 17
    - path:
        - 4
        - 0
        - 3
        - 0
        - 1
      span:
        - 3
        - 22
        - 27
    - path:
        - 4
        - 0
        - 3
        - 0
        - 2
        - 0
      span:
        - 4
        - 20
        - 43
    - path:
        - 4
        - 0
        - 3
        - 0
        - 2
        - 0
        - 1
      span:
        - 4
        - 35
        - 38
    - path:
        - 4
        - 0
        - 3
        - 0
        - 2
        - 0
        - 3
      span:
        - 4
        - 41
        - 42
    - path:
        - 4
        - 0
        - 3
        - 0
        - 2
        - 0
        - 4
      span:
        - 4
        - 20
        - 28
    - path:
        - 4
        - 0
        - 3
        - 0
        - 2
        - 0
        - 5
      span:
        - 4
        - 29
        - 34
    - path:
        - 4
        - 0
        - 8
        - 0
      span:
        - 2
        - 12
        - 6
        - 13
    - path:
        - 4
        - 0
        - 8
        - 0
        - 1
      span:
        - 2
        - 18
        - 23

